package com.example.weeklyplanner.domain.model;

public class DayPlan {
    
}
