package com.example.weeklyplanner.domain.model;

public class TaskEntry {

}
