@startuml weekly-planner-domain
title Weekly Planning – Domain (MVP, fixed prefs)

/' ======= Value Objects & Enums ======= '/
enum Priority { 
LOW
MEDIUM
HIGH 
}

class IsoWeek {
  +int year
  +int week
  +LocalDate monday()
}

class UserPreference {
  +LocalTime dayStart
  +LocalTime dayEnd
  +ZoneId zone
}

class PlanningWarning {
  +String code
  +String message
}

/' ======= Entities ======= '/
class Task {
  +UUID id
  +String title
  +String description
  +Priority priority
  +ZonedDateTime? dueDate
  +Duration estimated
}

class WeeklyPlan {
  +UUID id
  +IsoWeek isoWeek
  +String plannerVersion
  +String requestId
  +UserPreference preferencesSnapshot
  +DayPlan[] dayPlans
}

class DayPlan {
  +int dayIndex  // 1..7
  +TaskEntry[] entries
  +boolean add(TaskEntry e)
}

class TaskEntry {
  +UUID id
  +UUID taskId
  +int dayIndex
  +ZonedDateTime startAt
  +ZonedDateTime endAt
}

/' ======= Planning API (pure) ======= '/
interface Planner {
  +PlanningResult plan(PlanningRequest req)
  +String version()
}

class PlanningRequest {
  +List<Task> tasks
  +IsoWeek week
  +UserPreference prefs
  +String requestId
}

class PlanningResult {
  +List<TaskEntry> blocks
  +List<PlanningWarning> warnings
  +String plannerVersion
  +String requestId
}

/' ======= Relationships ======= '/
WeeklyPlan *-- IsoWeek
WeeklyPlan *-- DayPlan
DayPlan *-- TaskEntry
TaskEntry --> Task : taskId (ref)
Planner ..> PlanningRequest
Planner ..> PlanningResult
@enduml